Fixed the problem, that topbar menu-items cause a line break after login on small screens

--- a/css/bibsdb.styles.css
+++ b/css/bibsdb.styles.css
@@ -369,9 +369,6 @@ h6 {
 /* line 10, ../sass/framework/_bibsdb.navigation.scss */
 .topbar-menu {
   margin-top: 52px;
-  width: 50%;
-  /* Logo spans 6 colums - Topbar-menu spans 6 columns */
-  margin-left: -50%;
 }
 @media only screen and (max-width: 768px) {
   /* line 10, ../sass/framework/_bibsdb.navigation.scss */
@@ -385,7 +382,7 @@ h6 {
     margin-top: 0;
   }
 }
-/* line 20, ../sass/framework/_bibsdb.navigation.scss */
+/* line 19, ../sass/framework/_bibsdb.navigation.scss */
 .topbar-menu .menu-item {
   text-shadow: 1px 1px 0 #b7bbbf;
   font-size: 130%;
@@ -393,23 +390,23 @@ h6 {
   color: #6d6e71;
 }
 @media only screen and (min-width: 481px) and (max-width: 768px) {
-  /* line 20, ../sass/framework/_bibsdb.navigation.scss */
+  /* line 19, ../sass/framework/_bibsdb.navigation.scss */
   .topbar-menu .menu-item {
     padding: 20px 14px;
   }
 }
 @media only screen and (max-width: 480px) {
-  /* line 20, ../sass/framework/_bibsdb.navigation.scss */
+  /* line 19, ../sass/framework/_bibsdb.navigation.scss */
   .topbar-menu .menu-item {
-    padding: 10px 14px;
+    padding: 10px 10px;
   }
 }
-/* line 34, ../sass/framework/_bibsdb.navigation.scss */
+/* line 33, ../sass/framework/_bibsdb.navigation.scss */
 .topbar-menu .menu-item:hover {
   background-color: #7fc241;
   color: white;
 }
-/* line 39, ../sass/framework/_bibsdb.navigation.scss */
+/* line 38, ../sass/framework/_bibsdb.navigation.scss */
 .topbar-menu .menu-item.active {
   color: white;
   background-color: #979da2;
@@ -417,39 +414,39 @@ h6 {
 
 /* Navigation, main menu and secondary menu
    ========================================================================== */
-/* line 51, ../sass/framework/_bibsdb.navigation.scss */
+/* line 48, ../sass/framework/_bibsdb.navigation.scss */
 .navigation-wrapper {
   background-color: #6d6e71;
   /* Media queries */
 }
 @media only screen and (max-width: 768px) {
-  /* line 51, ../sass/framework/_bibsdb.navigation.scss */
+  /* line 48, ../sass/framework/_bibsdb.navigation.scss */
   .navigation-wrapper {
     background-color: #979da2;
   }
 }
 @media only screen and (max-width: 480px) {
-  /* line 51, ../sass/framework/_bibsdb.navigation.scss */
+  /* line 48, ../sass/framework/_bibsdb.navigation.scss */
   .navigation-wrapper {
     background-color: #979da2;
   }
 }
 
 @media only screen and (min-width: 769px) {
-  /* line 63, ../sass/framework/_bibsdb.navigation.scss */
+  /* line 60, ../sass/framework/_bibsdb.navigation.scss */
   .secondary-menu {
     font-size: 110%;
   }
 }
-/* line 70, ../sass/framework/_bibsdb.navigation.scss */
+/* line 67, ../sass/framework/_bibsdb.navigation.scss */
 .main-menu .menu-item, .secondary-menu .menu-item {
   color: white;
 }
-/* line 72, ../sass/framework/_bibsdb.navigation.scss */
+/* line 69, ../sass/framework/_bibsdb.navigation.scss */
 .main-menu .menu-item:hover, .secondary-menu .menu-item:hover {
   color: #7fc241;
 }
-/* line 75, ../sass/framework/_bibsdb.navigation.scss */
+/* line 72, ../sass/framework/_bibsdb.navigation.scss */
 .main-menu .menu-item.active, .secondary-menu .menu-item.active {
   color: #7fc241;
   font-family: "SourceSansProSemibold";
@@ -458,27 +455,27 @@ h6 {
 
 /* Sub menu
    ========================================================================== */
-/* line 85, ../sass/framework/_bibsdb.navigation.scss */
+/* line 82, ../sass/framework/_bibsdb.navigation.scss */
 h2.sub-menu-title {
   font-family: "SourceSansProSemibold";
   font-weight: normal;
 }
 
-/* line 89, ../sass/framework/_bibsdb.navigation.scss */
+/* line 86, ../sass/framework/_bibsdb.navigation.scss */
 .sub-menu {
   margin-bottom: 20px;
 }
-/* line 92, ../sass/framework/_bibsdb.navigation.scss */
+/* line 89, ../sass/framework/_bibsdb.navigation.scss */
 .sub-menu > li a {
   color: rgba(0, 0, 0, 0.7);
   padding-top: 5px;
   padding-bottom: 3px;
 }
-/* line 97, ../sass/framework/_bibsdb.navigation.scss */
+/* line 94, ../sass/framework/_bibsdb.navigation.scss */
 .sub-menu > li a:hover {
   color: rgba(0, 0, 0, 0.7);
 }
-/* line 104, ../sass/framework/_bibsdb.navigation.scss */
+/* line 101, ../sass/framework/_bibsdb.navigation.scss */
 .sub-menu li:before {
   color: rgba(0, 0, 0, 0.7);
   font-size: 100%;
@@ -692,21 +689,9 @@ button.download-button {
    ========================================================================== */
 /* Site name, slogan and logo
    ========================================================================== */
-/* line 15, ../sass/layout/_bibsdb.layout.scss */
-.logo {
-  width: 50%;
-  /* Logo spans 6 colums - Topbar-menu spans 6 columns */
-  margin-right: -50%;
-}
-/* line 18, ../sass/layout/_bibsdb.layout.scss */
-.logo img {
-  height: auto;
-  margin-top: 10px;
-}
-
 /* Content
    ========================================================================== */
-/* line 27, ../sass/layout/_bibsdb.layout.scss */
+/* line 20, ../sass/layout/_bibsdb.layout.scss */
 .content-wrapper {
   margin-top: 20px;
   margin-bottom: 20px;
